--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, max-scale=1.0, user-scale=0" />
-  <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>Ecommerce Web</title>
+  <title>React App</title>
 </head>
 
 <body>
